--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,12 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Medium Clone</a>
       <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "Write a story", new_post_path %></li>
+      <li><%= link_to "Write a story", new_post_path, class: "button" %></li>
         <% if user_signed_in? %>
-          <li><%= current_user.email %></li>
+          <li><%= link_to current_user.email %></li>
+          <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+          <li><%= link_to "Sign in / Sign up", new_user_session_path, class: "button" %></li>
         <% end %>
     </ul>
   </div>
